# alter-bot

./: Cargo.toml  Dockerfile.actions  mise.toml
.github/workflows/: deploy.yaml
.zed/: settings.json
src/: bot.rs  config.rs  consts.rs  db.rs  emojis.rs  main.rs  util.rs
src/awty/: event.rs
src/commands/: awty.rs  minecraft.rs  mod.rs  polls.rs  settings.rs
src/events/: component.rs
src/features/: mod.rs
src/features/awty/: commands.rs  mod.rs
src/features/awty/internal/: event.rs  format.rs  mod.rs  modrinth.rs  packwiz.rs  readme.txt  version.rs
src/features/fun/: dad.rs  events.rs  mod.rs
src/features/minecraft/: commands.rs  mod.rs
src/features/polls/: cache.rs  commands.rs  events.rs  mod.rs  modal.rs  tasks.rs
src/features/polls/internal/: embed.rs  logic.rs  mod.rs  renderer.rs
src/features/quote/: commands.rs  image.rs  info.txt  mod.rs
src/features/settings/: commands.rs  mod.rs
src/models/: guild.rs  mod.rs  poll.rs  poll_option.rs  vote.rs  voter_ban.rs
src/tasks/: mod.rs  poll_expiry.rs
src/utils/: embeds.rs  mod.rs  poll_logic.rs  renderer.rs
src/web/: middleware.rs  mod.rs  routes.rs  server.rs
src/web/routes/: polls.rs
